--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@types/node": "^16.11.42",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "foundation-sites": "^6.7.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-foundation": "^0.9.7",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
